# Fundamental

./: .gitignore  CMakeLists.txt
example/printfile/: CMakeLists.txt  fundamental_config.h  main.c  main.cpp
example/starfield/: CMakeLists.txt  fundamental_config.h  main.c
fundamental/: CMakeLists.txt  amalgamated.c
fundamental/include/: console_private.h  memory_private.h
fundamental/src/: Console.cpp  File.cpp  MainHandler.cpp  Memory.cpp  WinFloat.cpp  WinMath.cpp  console.c  file.c  mainhandler.c  memory.c  random.c  strutils.c  winfloat.c  winmath.c
public/: compilerinfo.h  console.h  console_private.h  definitions.h  file.h  memory.h  random.h  strutils.h  types.h  windows_stripped.h
