CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT( fundamental )

IF(MSVC)
	set(FUNDAMENTAL_COMPILE_FLAGS "/GF /Gy /GA /GS- /Gs9999999 /GT /fp:except-") # /GL
	set(FUNDAMENTAL_COMPILE_FLAGS_DEBUG ${FUNDAMENTAL_COMPILE_FLAGS})
	set(FUNDAMENTAL_COMPILE_FLAGS_RELEASE "/Os /Oy /Oi /Ob2 ${FUNDAMENTAL_COMPILE_FLAGS}")
	set(FUNDAMENTAL_LINKER_FLAGS "/NODEFAULTLIB /DYNAMICBASE:NO /MANIFEST:NO /OPT:REF /OPT:ICF /LTCG /STACK:0x100000,0x100000")
ELSE()
	set(FUNDAMENTAL_COMPILE_FLAGS_DEBUG "")
	set(FUNDAMENTAL_COMPILE_FLAGS_RELEASE "-Os")
	set(FUNDAMENTAL_LINKER_FLAGS "")
ENDIF()

add_subdirectory( fundamental )
add_subdirectory( example/printfile )
