CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT( fundamental )

IF(MSVC)
	set(FUNDAMENTAL_COMPILE_FLAGS "/GF /Gy /GA /GS- /Gs9999999 /GT /GR- /fp:except-")
	set(FUNDAMENTAL_COMPILE_FLAGS_DEBUG ${FUNDAMENTAL_COMPILE_FLAGS})
	set(FUNDAMENTAL_COMPILE_FLAGS_RELEASE "/GL /Os /Oi- /Ob0 /O1 ${FUNDAMENTAL_COMPILE_FLAGS}")
	set(FUNDAMENTAL_LINKER_FLAGS "/MERGE:.rdata=.text /ALIGN:16 /FILEALIGN:0x16 /SAFESEH:NO /INCREMENTAL:NO /NODEFAULTLIB /DYNAMICBASE:NO /MANIFEST:NO /OPT:REF /OPT:ICF /LTCG /STACK:0x100000,0x100000")
ELSE()
	set(FUNDAMENTAL_COMPILE_FLAGS_DEBUG "")
	set(FUNDAMENTAL_COMPILE_FLAGS_RELEASE "-Os")
	set(FUNDAMENTAL_LINKER_FLAGS "")
ENDIF()

add_subdirectory( fundamental )
add_subdirectory( example/printfile )
