CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT( fundamental )

IF(MSVC)
	set(FUNDAMENTAL_COMPILE_FLAGS "/GF /Gy /GA /GS- /Gs9999999 /Zp1 /GT /GR- /fp:except- ")
	set(FUNDAMENTAL_COMPILE_FLAGS_DEBUG ${FUNDAMENTAL_COMPILE_FLAGS})
	set(FUNDAMENTAL_COMPILE_FLAGS_RELEASE "/GL /Os /Ob1 /O1 ${FUNDAMENTAL_COMPILE_FLAGS}")
	set(FUNDAMENTAL_LINKER_FLAGS "/STUB:../../../fundamental/src/stub.exe /NODEFAULTLIB /ENTRY:FundamentalEntryPoint /DYNAMICBASE:NO /MANIFEST:NO /OPT:REF /OPT:ICF /LTCG /STACK:0x100000,0x100000")
	set(FUNDAMENTAL_LINKER_FLAGS_DEBUG ${FUNDAMENTAL_LINKER_FLAGS})
	set(FUNDAMENTAL_LINKER_FLAGS_RELEASE "/MERGE:.rdata=.text /MERGE:.pdata=.text /merge:.rdata=.text /merge:.bss=.text /merge:.text=.data /ignore:4254 /ALIGN:16 /SAFESEH:NO /INCREMENTAL:NO ${FUNDAMENTAL_LINKER_FLAGS}")
ELSE()
	set(FUNDAMENTAL_COMPILE_FLAGS_DEBUG "")
	set(FUNDAMENTAL_COMPILE_FLAGS_RELEASE "-Os")
	set(FUNDAMENTAL_LINKER_FLAGS_DEBUG "")
	set(FUNDAMENTAL_LINKER_FLAGS_RELEASE "")
ENDIF()

add_subdirectory( example/printfile )
add_subdirectory( example/starfield )
